<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Widget.CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/card_title"
                style="@style/Widget.CardTitle.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Timezone"/>

        </LinearLayout>

        <LinearLayout
            style="@style/Widget.TimeRow.Separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/fajr"/>

            <TextView
                android:id="@+id/fajr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="@string/fajr"/>

        </LinearLayout>

        <LinearLayout
            style="@style/Widget.TimeRow.Separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sunrise"/>

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="@string/sunrise"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.TimeRow.Separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/dhuhr"/>

            <TextView
                android:id="@+id/dhuhr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="@string/dhuhr"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.TimeRow.Separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/asr"/>

            <TextView
                android:id="@+id/asr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="@string/asr"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.TimeRow.Separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/maghrib"/>

            <TextView
                android:id="@+id/maghrib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="@string/maghrib"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.TimeRow.Separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/isha"/>

            <TextView
                android:id="@+id/sunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="@string/isha"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Widget.TimeRow.Separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Isha"/>

            <TextView
                android:id="@+id/isha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="Isha"/>
        </LinearLayout>

        <TextView
            android:id="@+id/alarm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical|end"
            android:paddingRight="@dimen/space"
            android:text="@string/button_alarm_on"
            android:textColor="@color/button_text"/>
    </LinearLayout>

</android.support.v7.widget.CardView>