<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".SetAlarmActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>


    <ScrollView
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:padding="@dimen/space"
                android:text="Turn on Alarm"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fajr"
                    style="@style/Widget.AlarmRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_half"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:singleLine="true"
                    android:tag="1"
                    android:text="@string/fajr"/>

                <TextView
                    android:id="@+id/dhuhr"
                    style="@style/Widget.AlarmRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_half"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:singleLine="true"
                    android:tag="1"
                    android:text="@string/dhuhr"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/asr"
                    style="@style/Widget.AlarmRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_half"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:singleLine="true"
                    android:tag="1"
                    android:text="@string/asr"/>

                <TextView
                    android:id="@+id/maghrib"
                    style="@style/Widget.AlarmRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_half"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:singleLine="true"
                    android:tag="1"
                    android:text="@string/maghrib"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/isha"
                    style="@style/Widget.AlarmRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_half"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:singleLine="true"
                    android:tag="1"
                    android:text="@string/isha"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
